--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,21 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <style>
         @font-face {
             font-family: 'NDOT';
-            src: url('https://fonts.cdnfonts.com/s/77484/N-Dot-55.woff') format('woff');
+            src: url('https://fonts.cdnfonts.com/s/77484/N-Dot-55.woff') format('woff'),
+                url('https://db.onlinewebfonts.com/t/062b9f395f3cdb752b02bb7e5a87422f.woff2') format('woff2');
         }
     </style>
 </head>
+
 <body style="background-color: #000; margin: 0; color: #fff; font-family: 'Inter', sans-serif;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
