--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prompts.</title>
+    <title>prompts. | the engine library for nano banana pro</title>
+    <meta name="description"
+        content="A curated collection of the most powerful engine prompts for Google Gemini Nano and Banana Pro. Find inspiration and start generating with high-performance prompts. — YouMind Repo">
+    <meta name="keywords"
+        content="gemini nano, banana pro, prompt library, ai prompts, google dev, engine prompts, youmind repo, creative prompts, coding prompts">
+    <meta name="author" content="Aryaman Sinha">
+    <meta name="theme-color" content="#000000">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prompts-vanco.vercel.app/">
+    <meta property="og:title" content="prompts. | the engine library">
+    <meta property="og:description"
+        content="A curated collection of the most powerful engine prompts for Google Gemini Nano and Banana Pro. — YouMind Repo">
+    <meta property="og:image" content="https://prompts-vanco.vercel.app/og-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://prompts-vanco.vercel.app/">
+    <meta property="twitter:title" content="prompts. | the engine library">
+    <meta property="twitter:description"
+        content="A curated collection of the most powerful engine prompts for Google Gemini Nano and Banana Pro. — YouMind Repo">
+    <meta property="twitter:image" content="https://prompts-vanco.vercel.app/og-image.png">
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
