seo: aggressive keyword optimization and structured data integration

--- a/client/index.html
+++ b/client/index.html
@@ -4,28 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nano prompts. | the engine library for nano banana pro</title>
+    <title>nano prompts. | #1 Prompt Presets & Engine Library for AI</title>
     <meta name="description"
-        content="A curated collection of the most powerful engine prompts for Google Gemini Nano and Banana Pro. Find inspiration and start generating with high-performance prompts. — YouMind Repo">
+        content="The world's most advanced prompt presets and engine library for Google Gemini Nano, Banana Pro, and GPT-4. Access 10,000+ high-performance AI prompts. — YouMind Repo">
     <meta name="keywords"
-        content="gemini nano, banana pro, nano prompts, prompt library, ai prompts, google dev, engine prompts, youmind repo, creative prompts, coding prompts">
+        content="prompt presets, nano prompts, gemini nano prompts, banana pro prompts, ai prompt library, prompt engineering, best character prompts, free ai prompts, prompt templates, youmind repo">
     <meta name="author" content="Aryaman Sinha">
     <meta name="theme-color" content="#000000">
+
+    <!-- JSON-LD Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "nano prompts.",
+      "alternateName": "Nano Prompt Presets Library",
+      "url": "https://prompts-vanco.vercel.app/",
+      "image": "https://prompts-vanco.vercel.app/og-image.png",
+      "description": "Premium prompt presets and architectural engine library for Google Gemini Nano and Banana Pro.",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "Web",
+      "author": {
+        "@type": "Person",
+        "name": "Aryaman Sinha"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://prompts-vanco.vercel.app/">
-    <meta property="og:title" content="nano prompts. | the engine library">
+    <meta property="og:title" content="nano prompts. | Premium Prompt Presets">
     <meta property="og:description"
-        content="A curated collection of the most powerful engine prompts for Google Gemini Nano and Banana Pro. — YouMind Repo">
+        content="Access the definitive library of prompt presets and engine architectures for Gemini Nano and Banana Pro. — YouMind Repo">
     <meta property="og:image" content="https://prompts-vanco.vercel.app/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://prompts-vanco.vercel.app/">
-    <meta property="twitter:title" content="nano prompts. | the engine library">
+    <meta property="twitter:title" content="nano prompts. | High-End Prompt presets">
     <meta property="twitter:description"
-        content="A curated collection of the most powerful engine prompts for Google Gemini Nano and Banana Pro. — YouMind Repo">
+        content="The architectural engine library for AI creators. 10,000+ prompt presets for Nano and Banana Pro.">
     <meta property="twitter:image" content="https://prompts-vanco.vercel.app/og-image.png">
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
