--- a/client/index.html
+++ b/client/index.html
@@ -29,8 +29,8 @@
       "@type": "WebApplication",
       "name": "nano prompts.",
       "alternateName": "Nano Prompt Presets Library",
-      "url": "https://prompts-vanco.vercel.app/",
-      "image": "https://prompts-vanco.vercel.app/og-image.png",
+      "url": "https://nanoprompts.space/",
+      "image": "https://nanoprompts.space/og-image.png",
       "description": "Premium prompt presets and architectural engine library for Google Gemini Nano and Banana Pro.",
       "applicationCategory": "DeveloperApplication",
       "operatingSystem": "Web",
@@ -48,19 +48,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://prompts-vanco.vercel.app/">
+    <meta property="og:url" content="https://nanoprompts.space/">
     <meta property="og:title" content="nano prompts. | Premium Prompt Presets">
     <meta property="og:description"
         content="Access the definitive library of prompt presets and engine architectures for Gemini Nano and Banana Pro. — YouMind Repo">
-    <meta property="og:image" content="https://prompts-vanco.vercel.app/og-image.png">
+    <meta property="og:image" content="https://nanoprompts.space/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://prompts-vanco.vercel.app/">
+    <meta property="twitter:url" content="https://nanoprompts.space/">
     <meta property="twitter:title" content="nano prompts. | High-End Prompt presets">
     <meta property="twitter:description"
         content="The architectural engine library for AI creators. 10,000+ prompt presets for Nano and Banana Pro.">
-    <meta property="twitter:image" content="https://prompts-vanco.vercel.app/og-image.png">
+    <meta property="twitter:image" content="https://nanoprompts.space/og-image.png">
+
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="manifest" href="/manifest.json" />
