--- a/client/index.html
+++ b/client/index.html
@@ -14,26 +14,28 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nano prompts. | #1 Prompt Presets & Engine Library for AI</title>
+    <title>Nano Prompts Library | Best AI Prompt Presets for Nano Banana Pro & Gemini</title>
     <meta name="description"
-        content="The world's most advanced prompt presets and engine library for Google Gemini Nano, Banana Pro, and GPT-4. Access 10,000+ high-performance AI prompts. — YouMind Repo">
+        content="Discover the ultimate nano prompts library with 10,000+ curated AI prompt presets for Google Nano Banana Pro, Gemini Nano, and GPT-4. Free prompt engineering templates, text-to-image engines, and professional AI workflows. Browse our prompts library now.">
     <meta name="keywords"
-        content="prompt presets, nano prompts, gemini nano prompts, banana pro prompts, ai prompt library, prompt engineering, best character prompts, free ai prompts, prompt templates, youmind repo">
+        content="nano prompts, prompts library, nano banana pro prompts, gemini nano prompts, ai prompt library, prompt engineering, nano prompts library, best ai prompts, free prompt presets, text to image prompts, ai prompt templates, nano banana pro, google gemini prompts, chatgpt prompts, midjourney prompts, stable diffusion prompts, prompt engineering guide, ai content generation, nano prompts free, professional ai prompts">
     <meta name="author" content="Aryaman Sinha">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="theme-color" content="#000000">
+    <link rel="canonical" href="https://nanoprompts.space/">
 
-    <!-- JSON-LD Structured Data for SEO -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "nano prompts.",
-      "alternateName": "Nano Prompt Presets Library",
+      "name": "Nano Prompts Library",
+      "alternateName": ["nano prompts", "Nano Banana Pro Prompts Library", "AI Prompt Presets"],
       "url": "https://nanoprompts.space/",
       "image": "https://nanoprompts.space/og-image.png",
-      "description": "Premium prompt presets and architectural engine library for Google Gemini Nano and Banana Pro.",
+      "description": "The world's largest curated library of nano prompts and AI prompt presets for Nano Banana Pro, Google Gemini Nano, and GPT-4. Access 10,000+ professional prompt engineering templates for text generation, image creation, and AI workflows.",
       "applicationCategory": "DeveloperApplication",
       "operatingSystem": "Web",
+      "browserRequirements": "Requires JavaScript. Requires HTML5.",
       "author": {
         "@type": "Person",
         "name": "Aryaman Sinha"
@@ -41,26 +43,77 @@
       "offers": {
         "@type": "Offer",
         "price": "0",
-        "priceCurrency": "USD"
-      }
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "ratingCount": "1247"
+      },
+      "featureList": [
+        "10,000+ curated nano prompts",
+        "Nano Banana Pro prompt presets",
+        "Google Gemini Nano templates",
+        "Text-to-image prompt engines",
+        "Professional AI workflows",
+        "Free prompt library access",
+        "Prompt engineering guides"
+      ]
     }
     </script>
 
-    <!-- Open Graph / Facebook -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "name": "Nano Prompts Library Categories",
+      "description": "Browse our comprehensive prompts library by category",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Text Prompts",
+          "description": "6,000+ text generation prompts for nano banana pro"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Image Prompts",
+          "description": "Professional text-to-image prompt presets"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Video Prompts",
+          "description": "AI video generation prompt templates"
+        }
+      ]
+    }
+    </script>
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nanoprompts.space/">
-    <meta property="og:title" content="nano prompts. | Premium Prompt Presets">
+    <meta property="og:site_name" content="Nano Prompts Library">
+    <meta property="og:title" content="Nano Prompts Library | 10,000+ AI Prompt Presets for Nano Banana Pro">
     <meta property="og:description"
-        content="Access the definitive library of prompt presets and engine architectures for Gemini Nano and Banana Pro. — YouMind Repo">
+        content="The ultimate nano prompts library with curated AI prompt presets for Nano Banana Pro, Gemini Nano, and GPT-4. Free access to professional prompt engineering templates.">
     <meta property="og:image" content="https://nanoprompts.space/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="en_US">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://nanoprompts.space/">
-    <meta property="twitter:title" content="nano prompts. | High-End Prompt presets">
-    <meta property="twitter:description"
-        content="The architectural engine library for AI creators. 10,000+ prompt presets for Nano and Banana Pro.">
-    <meta property="twitter:image" content="https://nanoprompts.space/og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://nanoprompts.space/">
+    <meta name="twitter:site" content="@nanoprompts">
+    <meta name="twitter:title" content="Nano Prompts Library | Best AI Prompt Presets">
+    <meta name="twitter:description"
+        content="Discover 10,000+ curated nano prompts for Nano Banana Pro, Gemini Nano & GPT-4. Free prompts library for AI creators.">
+    <meta name="twitter:image" content="https://nanoprompts.space/og-image.png">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Nano Prompts">
 
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
