--- a/client/index.html
+++ b/client/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-WQ622C8J');</script>
-    <!-- End Google Tag Manager -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nano Prompts Library | Best AI Prompt Presets for Nano Banana Pro & Gemini</title>
-    <meta name="description"
-        content="Discover the ultimate nano prompts library with 10,000+ curated AI prompt presets for Google Nano Banana Pro, Gemini Nano, and GPT-4. Free prompt engineering templates, text-to-image engines, and professional AI workflows. Browse our prompts library now.">
-    <meta name="keywords"
-        content="nano prompts, prompts library, nano banana pro prompts, gemini nano prompts, ai prompt library, prompt engineering, nano prompts library, best ai prompts, free prompt presets, text to image prompts, ai prompt templates, nano banana pro, google gemini prompts, chatgpt prompts, midjourney prompts, stable diffusion prompts, prompt engineering guide, ai content generation, nano prompts free, professional ai prompts">
-    <meta name="author" content="Aryaman Sinha">
-    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-    <meta name="theme-color" content="#000000">
-    <link rel="canonical" href="https://nanoprompts.space/">
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WQ622C8J');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nano Prompts Library | Best AI Image Prompt Presets for Gemini & GPT</title>
+  <meta name="description"
+    content="Discover the ultimate nano prompts library with 10,000+ curated AI prompt presets for Gemini Image Tool, Nano Banana Pro, and GPT based image generation. Free prompt engineering templates for stunning image creation. Browse our prompts library now.">
+  <meta name="keywords"
+    content="nano prompts, prompts library, gemini image tool, nano banana pro prompts, gpt image prompts, ai prompt library, prompt engineering, nano prompts library, best ai prompts, free prompt presets, text to image prompts, ai prompt templates, nano banana pro, google gemini prompts, midjourney prompts, stable diffusion prompts, prompt engineering guide, image generation, nano prompts free">
+  <meta name="author" content="Aryaman Sinha">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="theme-color" content="#000000">
+  <link rel="canonical" href="https://nanoprompts.space/">
 
-    <script type="application/ld+json">
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
@@ -32,7 +32,7 @@
       "alternateName": ["nano prompts", "Nano Banana Pro Prompts Library", "AI Prompt Presets"],
       "url": "https://nanoprompts.space/",
       "image": "https://nanoprompts.space/og-image.png",
-      "description": "The world's largest curated library of nano prompts and AI prompt presets for Nano Banana Pro, Google Gemini Nano, and GPT-4. Access 10,000+ professional prompt engineering templates for text generation, image creation, and AI workflows.",
+      "description": "The world's largest curated library of nano prompts and AI prompt presets for Gemini Image Tool, Nano Banana Pro, and GPT based image generation. Access 10,000+ professional prompt engineering templates for stunning image creation.",
       "applicationCategory": "DeveloperApplication",
       "operatingSystem": "Web",
       "browserRequirements": "Requires JavaScript. Requires HTML5.",
@@ -53,17 +53,17 @@
       },
       "featureList": [
         "10,000+ curated nano prompts",
-        "Nano Banana Pro prompt presets",
-        "Google Gemini Nano templates",
+        "Gemini Image Tool presets",
+        "GPT based image generation",
         "Text-to-image prompt engines",
-        "Professional AI workflows",
-        "Free prompt library access",
+        "Nano Banana Pro templates",
+        "Free image library access",
         "Prompt engineering guides"
       ]
     }
     </script>
 
-    <script type="application/ld+json">
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "ItemList",
@@ -73,72 +73,72 @@
         {
           "@type": "ListItem",
           "position": 1,
-          "name": "Text Prompts",
-          "description": "6,000+ text generation prompts for nano banana pro"
+          "name": "Gemini Image Tool",
+          "description": "6,000+ image generation prompts for Gemini"
         },
         {
           "@type": "ListItem",
           "position": 2,
-          "name": "Image Prompts",
-          "description": "Professional text-to-image prompt presets"
+          "name": "GPT Image Prompts",
+          "description": "Professional GPT based image prompt presets"
         },
         {
           "@type": "ListItem",
           "position": 3,
-          "name": "Video Prompts",
-          "description": "AI video generation prompt templates"
+          "name": "Nano Banana Pro",
+          "description": "AI image generation prompt templates"
         }
       ]
     }
     </script>
 
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://nanoprompts.space/">
-    <meta property="og:site_name" content="Nano Prompts Library">
-    <meta property="og:title" content="Nano Prompts Library | 10,000+ AI Prompt Presets for Nano Banana Pro">
-    <meta property="og:description"
-        content="The ultimate nano prompts library with curated AI prompt presets for Nano Banana Pro, Gemini Nano, and GPT-4. Free access to professional prompt engineering templates.">
-    <meta property="og:image" content="https://nanoprompts.space/og-image.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://nanoprompts.space/">
+  <meta property="og:site_name" content="Nano Prompts Library">
+  <meta property="og:title" content="Nano Prompts Library | 10,000+ AI Prompt Presets for Nano Banana Pro">
+  <meta property="og:description"
+    content="The ultimate nano prompts library with curated AI prompt presets for Gemini Image Tool, Nano Banana Pro, and GPT based image generation. Free access to professional image prompt engineering templates.">
+  <meta property="og:image" content="https://nanoprompts.space/og-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="en_US">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://nanoprompts.space/">
-    <meta name="twitter:site" content="@nanoprompts">
-    <meta name="twitter:title" content="Nano Prompts Library | Best AI Prompt Presets">
-    <meta name="twitter:description"
-        content="Discover 10,000+ curated nano prompts for Nano Banana Pro, Gemini Nano & GPT-4. Free prompts library for AI creators.">
-    <meta name="twitter:image" content="https://nanoprompts.space/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://nanoprompts.space/">
+  <meta name="twitter:site" content="@nanoprompts">
+  <meta name="twitter:title" content="Nano Prompts Library | Best AI Prompt Presets">
+  <meta name="twitter:description"
+    content="Discover 10,000+ curated nano prompts for Gemini Image Tool, Nano Banana Pro & GPT based image generation. Free prompts library for AI creators.">
+  <meta name="twitter:image" content="https://nanoprompts.space/og-image.png">
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Nano Prompts">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Nano Prompts">
 
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-    <style>
-        @font-face {
-            font-family: 'NDOT';
-            src: url('https://fonts.cdnfonts.com/s/77484/N-Dot-55.woff') format('woff'),
-                url('https://db.onlinewebfonts.com/t/062b9f395f3cdb752b02bb7e5a87422f.woff2') format('woff2');
-        }
-    </style>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: 'NDOT';
+      src: url('https://fonts.cdnfonts.com/s/77484/N-Dot-55.woff') format('woff'),
+        url('https://db.onlinewebfonts.com/t/062b9f395f3cdb752b02bb7e5a87422f.woff2') format('woff2');
+    }
+  </style>
 </head>
 
 <body style="background-color: #000; margin: 0; color: #fff; font-family: 'Inter', sans-serif;">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQ622C8J" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQ622C8J" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
